Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20213

binlog_encryption.binlog_incident failed in buildbot, server crashed in Check::validate

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/18767

      10.4 de9e3930940c44458d254987066a81f1

      binlog_encryption.binlog_incident 'mix'  w3 [ fail ]
              Test ended at 2019-07-26 12:19:52
       
      CURRENT_TEST: binlog_encryption.binlog_incident
       
       
      Failed to start mysqld.1
      mysqltest failed but provided no output
       
       
       - found 'core' (0/0)
       
      Trying 'dbx' to get a backtrace
       
      Trying 'gdb' to get a backtrace from coredump /mnt/buildbot/build/mariadb-10.4.7/mysql-test/var/3/log/binlog_encryption.binlog_incident-mix/mysqld.1/data/core
      Core generated by '/mnt/buildbot/build/mariadb-10.4.7/sql/mysqld'
      Output from gdb follows. The first stack trace is from the failing thread.
      The following stack traces are from all threads (so the failing one is
      duplicated).
      --------------------------
      [New LWP 4437]
      [New LWP 4431]
      [New LWP 4438]
      [New LWP 4436]
      [New LWP 4435]
      [New LWP 4434]
      [New LWP 4433]
      [New LWP 4432]
      [New LWP 4430]
      [New LWP 4427]
      [Thread debugging using libthread_db enabled]
      Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
      Core was generated by `/mnt/buildbot/build/mariadb-10.4.7/sql/mysqld --defaults-group-suffix=.1 --defa'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x810b189a in my_read (Filedes=7, Buffer=0xad5f790c "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=4096, MyFlags=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/my_read.c:63
      63	      int got_errno= my_errno= errno;
      [Current thread is 1 (Thread 0xad5f9b40 (LWP 4437))]
      #0  0x810b189a in my_read (Filedes=7, Buffer=0xad5f790c "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=4096, MyFlags=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/my_read.c:63
      #1  0x8091ef8f in output_core_info () at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/signal_handler.cc:66
      #2  0x8091f783 in handle_fatal_signal (sig=6) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/signal_handler.cc:339
      #3  <signal handler called>
      #4  0xb778fc31 in __kernel_vsyscall ()
      #5  0xb706de89 in raise () from /lib/i386-linux-gnu/libc.so.6
      #6  0xb706f3e7 in abort () from /lib/i386-linux-gnu/libc.so.6
      #7  0xb7066d07 in ?? () from /lib/i386-linux-gnu/libc.so.6
      #8  0xb7066d8b in __assert_fail () from /lib/i386-linux-gnu/libc.so.6
      #9  0x80f6fa62 in Check::validate (space=0x84447738) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4567
      #10 0x80f6db68 in fil_validate () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4598
      #11 0x80f5fcf4 in fil_validate_skip () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:216
      #12 0x80f6d233 in fil_aio_wait (segment=5) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4353
      #13 0x80e17243 in io_handler_thread (arg=0x823ef6f4 <n+20>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #14 0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #15 0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 10 (Thread 0xb6eaf7c0 (LWP 4427)):
      #0  0xb778fc31 in __kernel_vsyscall ()
      #1  0xb73f2a8c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
      #2  0x80d31854 in os_event::wait (this=0x843433a8) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:158
      #3  0x80d312b5 in os_event::wait_low (this=0x843433a8, reset_sig_count=2) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:325
      #4  0x80d315fb in os_event_wait_low (event=0x843433a8, reset_sig_count=2) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:502
      #5  0x80e1facf in sync_array_wait_event (arr=0x842d3510, cell=@0xbf9577e0: 0x842d35a0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/sync/sync0arr.cc:471
      #6  0x80c799ad in TTASEventMutex<GenericPolicy>::enter (this=0x819e6870 <fil_system+16>, max_spins=60, max_delay=4, filename=0x814f08d8 "/home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc", line=4586) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/include/ib0mutex.h:478
      #7  0x80c77caa in PolicyMutex<TTASEventMutex<GenericPolicy> >::enter (this=0x819e6870 <fil_system+16>, n_spins=30, n_delay=4, name=0x814f08d8 "/home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc", line=4586) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/include/ib0mutex.h:595
      #8  0x80f6db17 in fil_validate () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4586
      #9  0x80f8ee60 in SysTablespace::open_or_create (this=0x823fc980 <srv_sys_space>, is_temp=false, create_new_db=false, sum_new_sizes=0xbf957968, flush_lsn=0xbf9579b8) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fsp/fsp0sysspace.cc:924
      #10 0x80e1b59f in srv_start (create_new_db=false) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:1583
      #11 0x80c51cca in innodb_init (p=0x842bcb38) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/handler/ha_innodb.cc:4266
      #12 0x80923110 in ha_initialize_handlerton (plugin=0x84260cb0) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/handler.cc:557
      #13 0x8060fb86 in plugin_initialize (tmp_root=0xbf95cb88, plugin=0x84260cb0, argc=0x81b8e0b4 <remaining_argc>, argv=0x840fa128, options_only=false) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/sql_plugin.cc:1438
      #14 0x80610724 in plugin_init (argc=0x81b8e0b4 <remaining_argc>, argv=0x840fa128, flags=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/sql_plugin.cc:1720
      #15 0x804cdcd5 in init_server_components () at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/mysqld.cc:5203
      #16 0x804cf1b5 in mysqld_main (argc=137, argv=0x840fa128) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/mysqld.cc:5726
      #17 0x804c34fb in main (argc=9, argv=0xbf95d874) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/main.cc:25
       
      Thread 9 (Thread 0xb2c3cb40 (LWP 4430)):
      #0  0xb778fc31 in __kernel_vsyscall ()
      #1  0xb73f2e56 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
      #2  0x810bac4c in safe_cond_timedwait (cond=0x82404100 <COND_timer>, mp=0x82404080 <LOCK_timer>, abstime=0xb2c3c250, file=0x81543f10 "/home/buildbot/buildbot/build/mariadb-10.4.7/include/mysql/psi/mysql_thread.h", line=1204) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/thr_mutex.c:546
      #3  0x810bbb59 in inline_mysql_cond_timedwait (that=0x82404100 <COND_timer>, mutex=0x82404080 <LOCK_timer>, abstime=0xb2c3c250, src_file=0x81543f60 "/home/buildbot/buildbot/build/mariadb-10.4.7/mysys/thr_timer.c", src_line=292) at /home/buildbot/buildbot/build/mariadb-10.4.7/include/mysql/psi/mysql_thread.h:1204
      #4  0x810bc6c9 in timer_handler (arg=0x0) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/thr_timer.c:292
      #5  0x80b5e064 in pfs_spawn_thread (arg=0x8423e328) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/perfschema/pfs.cc:1862
      #6  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #7  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 8 (Thread 0xafdfeb40 (LWP 4432)):
      #0  0xb775b570 in ?? () from /lib/i386-linux-gnu/libaio.so.1
      #1  0xb775b5e6 in io_getevents () from /lib/i386-linux-gnu/libaio.so.1
      #2  0x80d23a8f in LinuxAIOHandler::collect (this=0xafdfe0e0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1809
      #3  0x80d24089 in LinuxAIOHandler::poll (this=0xafdfe0e0, m1=0xafdfe150, m2=0xafdfe154, request=0xafdfe178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1968
      #4  0x80d241ed in os_aio_linux_handler (global_segment=0, m1=0xafdfe150, m2=0xafdfe154, request=0xafdfe178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:2022
      #5  0x80d290e5 in os_aio_handler (segment=0, m1=0xafdfe150, m2=0xafdfe154, request=0xafdfe178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:5561
      #6  0x80f6d284 in fil_aio_wait (segment=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4355
      #7  0x80e17243 in io_handler_thread (arg=0x823ef6e0 <n>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #8  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #9  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 7 (Thread 0xaf5fdb40 (LWP 4433)):
      #0  0xb775b570 in ?? () from /lib/i386-linux-gnu/libaio.so.1
      #1  0xb775b5e6 in io_getevents () from /lib/i386-linux-gnu/libaio.so.1
      #2  0x80d23a8f in LinuxAIOHandler::collect (this=0xaf5fd0e0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1809
      #3  0x80d24089 in LinuxAIOHandler::poll (this=0xaf5fd0e0, m1=0xaf5fd150, m2=0xaf5fd154, request=0xaf5fd178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1968
      #4  0x80d241ed in os_aio_linux_handler (global_segment=1, m1=0xaf5fd150, m2=0xaf5fd154, request=0xaf5fd178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:2022
      #5  0x80d290e5 in os_aio_handler (segment=1, m1=0xaf5fd150, m2=0xaf5fd154, request=0xaf5fd178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:5561
      #6  0x80f6d284 in fil_aio_wait (segment=1) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4355
      #7  0x80e17243 in io_handler_thread (arg=0x823ef6e4 <n+4>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #8  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #9  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 6 (Thread 0xaedfcb40 (LWP 4434)):
      #0  0xb775b570 in ?? () from /lib/i386-linux-gnu/libaio.so.1
      #1  0xb775b5e6 in io_getevents () from /lib/i386-linux-gnu/libaio.so.1
      #2  0x80d23a8f in LinuxAIOHandler::collect (this=0xaedfc0e0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1809
      #3  0x80d24089 in LinuxAIOHandler::poll (this=0xaedfc0e0, m1=0xaedfc150, m2=0xaedfc154, request=0xaedfc178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1968
      #4  0x80d241ed in os_aio_linux_handler (global_segment=2, m1=0xaedfc150, m2=0xaedfc154, request=0xaedfc178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:2022
      #5  0x80d290e5 in os_aio_handler (segment=2, m1=0xaedfc150, m2=0xaedfc154, request=0xaedfc178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:5561
      #6  0x80f6d284 in fil_aio_wait (segment=2) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4355
      #7  0x80e17243 in io_handler_thread (arg=0x823ef6e8 <n+8>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #8  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #9  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 5 (Thread 0xae5fbb40 (LWP 4435)):
      #0  0xb775b570 in ?? () from /lib/i386-linux-gnu/libaio.so.1
      #1  0xb775b5e6 in io_getevents () from /lib/i386-linux-gnu/libaio.so.1
      #2  0x80d23a8f in LinuxAIOHandler::collect (this=0xae5fb0e0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1809
      #3  0x80d24089 in LinuxAIOHandler::poll (this=0xae5fb0e0, m1=0xae5fb150, m2=0xae5fb154, request=0xae5fb178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1968
      #4  0x80d241ed in os_aio_linux_handler (global_segment=3, m1=0xae5fb150, m2=0xae5fb154, request=0xae5fb178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:2022
      #5  0x80d290e5 in os_aio_handler (segment=3, m1=0xae5fb150, m2=0xae5fb154, request=0xae5fb178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:5561
      #6  0x80f6d284 in fil_aio_wait (segment=3) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4355
      #7  0x80e17243 in io_handler_thread (arg=0x823ef6ec <n+12>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #8  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #9  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 4 (Thread 0xaddfab40 (LWP 4436)):
      #0  0xb775b570 in ?? () from /lib/i386-linux-gnu/libaio.so.1
      #1  0xb775b5e6 in io_getevents () from /lib/i386-linux-gnu/libaio.so.1
      #2  0x80d23a8f in LinuxAIOHandler::collect (this=0xaddfa0e0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1809
      #3  0x80d24089 in LinuxAIOHandler::poll (this=0xaddfa0e0, m1=0xaddfa150, m2=0xaddfa154, request=0xaddfa178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:1968
      #4  0x80d241ed in os_aio_linux_handler (global_segment=4, m1=0xaddfa150, m2=0xaddfa154, request=0xaddfa178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:2022
      #5  0x80d290e5 in os_aio_handler (segment=4, m1=0xaddfa150, m2=0xaddfa154, request=0xaddfa178) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0file.cc:5561
      #6  0x80f6d284 in fil_aio_wait (segment=4) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4355
      #7  0x80e17243 in io_handler_thread (arg=0x823ef6f0 <n+16>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #8  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #9  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 3 (Thread 0xacdf8b40 (LWP 4438)):
      #0  0xb778fc31 in __kernel_vsyscall ()
      #1  0xb73f2a8c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
      #2  0x80d31854 in os_event::wait (this=0x843ff698) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:158
      #3  0x80d312b5 in os_event::wait_low (this=0x843ff698, reset_sig_count=1) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:325
      #4  0x80d315fb in os_event_wait_low (event=0x843ff698, reset_sig_count=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/os/os0event.cc:502
      #5  0x80efbd6a in buf_flush_page_cleaner_coordinator () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/buf/buf0flu.cc:3045
      #6  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #7  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 2 (Thread 0xb17ffb40 (LWP 4431)):
      #0  0xb778fc31 in __kernel_vsyscall ()
      #1  0xb73f2e56 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
      #2  0x810bac4c in safe_cond_timedwait (cond=0x823bb6e0 <COND_checkpoint>, mp=0x823bb660 <LOCK_checkpoint>, abstime=0xb17ff19c, file=0x813b9ae0 "/home/buildbot/buildbot/build/mariadb-10.4.7/include/mysql/psi/mysql_thread.h", line=1204) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/thr_mutex.c:546
      #3  0x80bbe4ac in inline_mysql_cond_timedwait (that=0x823bb6e0 <COND_checkpoint>, mutex=0x823bb660 <LOCK_checkpoint>, abstime=0xb17ff19c, src_file=0x813b9b30 "/home/buildbot/buildbot/build/mariadb-10.4.7/storage/maria/ma_servicethread.c", src_line=116) at /home/buildbot/buildbot/build/mariadb-10.4.7/include/mysql/psi/mysql_thread.h:1204
      #4  0x80bbe9ef in my_service_thread_sleep (control=0x819dc338 <checkpoint_control>, sleep_time=29000000000) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/maria/ma_servicethread.c:115
      #5  0x80bb28e9 in ma_checkpoint_background (arg=0x1e) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/maria/ma_checkpoint.c:707
      #6  0x80b5e064 in pfs_spawn_thread (arg=0x842bcb38) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/perfschema/pfs.cc:1862
      #7  0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #8  0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
       
      Thread 1 (Thread 0xad5f9b40 (LWP 4437)):
      #0  0x810b189a in my_read (Filedes=7, Buffer=0xad5f790c "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=4096, MyFlags=0) at /home/buildbot/buildbot/build/mariadb-10.4.7/mysys/my_read.c:63
      #1  0x8091ef8f in output_core_info () at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/signal_handler.cc:66
      #2  0x8091f783 in handle_fatal_signal (sig=6) at /home/buildbot/buildbot/build/mariadb-10.4.7/sql/signal_handler.cc:339
      #3  <signal handler called>
      #4  0xb778fc31 in __kernel_vsyscall ()
      #5  0xb706de89 in raise () from /lib/i386-linux-gnu/libc.so.6
      #6  0xb706f3e7 in abort () from /lib/i386-linux-gnu/libc.so.6
      #7  0xb7066d07 in ?? () from /lib/i386-linux-gnu/libc.so.6
      #8  0xb7066d8b in __assert_fail () from /lib/i386-linux-gnu/libc.so.6
      #9  0x80f6fa62 in Check::validate (space=0x84447738) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4567
      #10 0x80f6db68 in fil_validate () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4598
      #11 0x80f5fcf4 in fil_validate_skip () at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:216
      #12 0x80f6d233 in fil_aio_wait (segment=5) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/fil/fil0fil.cc:4353
      #13 0x80e17243 in io_handler_thread (arg=0x823ef6f4 <n+20>) at /home/buildbot/buildbot/build/mariadb-10.4.7/storage/innobase/srv/srv0start.cc:324
      #14 0xb73ed2b5 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
      #15 0xb712916e in clone () from /lib/i386-linux-gnu/libc.so.6
      

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.