MDEV-20213 binlog_encryption.binlog_incident failed in buildbot, server crashed in Check::validate

Check::validate(): Relax a debug assertion. TRX_SYS_SPACE fil_space_t
can be created and became visible to this assertion before
fil_system.sys_space becomes initialized